# qr-code-generator-saas

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py  models.py
app/routes/: auth.py  errors.py  main.py  qr_code.py
app/services/: email_service.py  qr_generator.py  url_validator.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html
app/templates/auth/: login.html  register.html  reset_password.html
app/templates/main/: about.html  index.html  privacy.html
app/templates/qr_codes/: dashboard.html  generate.html
app/utils/: helpers.py
docs/: api.md  deployment.md
migrations/: env.py  script.py.mako
tests/: __init__.py  conftest.py
tests/integration/: test_auth_routes.py  test_qr_routes.py
tests/unit/: test_models.py  test_services.py
